# lo21-project

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Player.cpp  Player.h  README.md  main.cpp  run-clang.ps1  vcpkg.json
.github/workflows/: clang-format.yml  cmake.yml
UMLs/: backend-class-diagramm.puml  class-diagramm.puml  frontend-class-diagramm.puml
src/: App.cpp
src/Constants/: CMakeLists.txt  Constants.h
src/Controller/: CMakeLists.txt  DeckController.h  GameController.h  GameCreationController.cpp  GameCreationController.h  GameplayController.h
src/Model/: Board.cpp  Board.h  Border.cpp  Border.h  CMakeLists.txt  Card.cpp  Card.h  CombatMode.cpp  CombatMode.h  Combo.cpp  Combo.h  Deck.cpp  Deck.h  DiscardDeck.cpp  DiscardDeck.h  EliteTroops.cpp  EliteTroops.h  EventManager.h  Game.cpp  Game.h  GameOptions.cpp  GameOptions.h  Hand.cpp  Hand.h  ISubscriber.h  NormalCard.cpp  NormalCard.h  NormalDeck.cpp  NormalDeck.h  Player.cpp  Player.h  Round.cpp  Round.h  Ruse.cpp  Ruse.h  Stone.cpp  Stone.h  TacticCard.cpp  TacticCard.h  TacticDeck.cpp  (+5 more)
src/Model/Shotten/: Board.cpp  Board.h  Border.cpp  Border.h  CombatMode.h  Combo.cpp  Combo.h  Deck.h  DiscardDeck.h  EliteTroops.h  Game.cpp  Game.h  GameOptions.h  Hand.cpp  Hand.h  NormalCard.cpp  NormalCard.h  NormalDeck.cpp  NormalDeck.h  Player.cpp  Player.h  Round.cpp  Round.h  Ruse.h  Stone.cpp  Stone.h  TacticCard.h  TacticDeck.cpp  TacticDeck.h  Turn.cpp  Turn.h
src/Model/Shotten/Board/: Board.cpp  Board.h
src/Model/Shotten/Board/Entities/: Border.cpp  Border.h  Stone.cpp  Stone.h  Wall.h
src/Model/Shotten/Cards/: Card.cpp  Card.h
src/Model/Shotten/Cards/CardTypes/: NormalCard.cpp  NormalCard.h  TacticCard.cpp  TacticCard.h
src/Model/Shotten/Cards/CardTypes/Tactic/: CombatMode.h  EliteTroops.h  Ruse.cpp  Ruse.h
src/Model/Shotten/Deck/DeckTypes/: DiscardDeck.cpp  DiscardDeck.h  NormalDeck.cpp  NormalDeck.h  TacticDeck.h
src/Model/Shotten/Player/: Player.cpp  Player.h
src/Model/Shotten/Player/IA/: README.md
src/Objective-C/: CMakeLists.txt  CocoaBridge.h  CocoaBridge.mm
src/View/: CMakeLists.txt
src/View/Components/BackButton/: BackButton.cpp  BackButton.h  BackButton.ui
src/View/Components/BorderWidget/: BorderWidget.cpp  BorderWidget.h  BorderWidget.ui
src/View/Components/Button/: Button.cpp  Button.h  Button.ui
src/View/Components/CardManager/: CardManager.cpp  CardManager.h
src/View/Components/CardSlot/: CardSlot.cpp  CardSlot.h  CardSlot.ui
src/View/Components/ComboWidget/: ComboWidget.cpp  ComboWidget.h  ComboWidget.ui
src/View/Components/DeckWidget/: DeckWidget.cpp  DeckWidget.h  DeckWidget.ui
src/View/Components/DragableCard/: DragableCard.cpp  DragableCard.h  DragableCard.ui
src/View/Components/HandWidget/: HandWidget.cpp  HandWidget.h  HandWidget.ui
src/View/Components/SwitchButton/: SwitchButton.cpp  SwitchButton.h  SwitchButton.ui
src/View/Components/SwitchSelector/: SwitchSelector.cpp  SwitchSelector.h  SwitchSelector.ui
src/View/Components/SwitchSelector/ButtonSelector/: ButtonSelector.cpp  ButtonSelector.h  ButtonSelector.ui
src/View/Components/TextInput/: TextInput.cpp  TextInput.h  TextInput.ui
src/View/Constants/: CardSlotType.h  Widgets.h  WidgetsOptions.h
src/View/MainWidget/: MainWidget.cpp  MainWidget.h  MainWidget.ui
src/View/MainWindow/: MainWindow.cpp  MainWindow.h
src/View/MenuBar/: MenuBar.cpp  MenuBar.h  MenuBar.ui
src/View/MenuBar/Menus/EditMenu/: EditMenu.cpp  EditMenu.h  EditMenu.ui
src/View/MenuBar/Menus/FileMenu/: FileMenu.cpp  FileMenu.h  FileMenu.ui
src/View/MenuBar/Menus/HelpMenu/: HelpMenu.cpp  HelpMenu.h  HelpMenu.ui
src/View/MenuBar/Menus/ViewMenu/: ViewMenu.cpp  ViewMenu.h  ViewMenu.ui
src/View/StackedWidget/: StackedWidget.cpp  StackedWidget.h  StackedWidget.ui
src/View/Style/: Style.cpp  Style.h
src/View/Utils/: WidgetsUtils.cpp  WidgetsUtils.h
src/View/Widgets/: StackedChildWidget.cpp  StackedChildWidget.h  StackedChildWidget.ui
src/View/Widgets/GameOptionsWidget/: GameOptionsWidget.cpp  GameOptionsWidget.h  GameOptionsWidget.ui
src/View/Widgets/GameWidget/: GameWidget.cpp  GameWidget.h
src/View/Widgets/HomeWidget/: HomeWidget.cpp  HomeWidget.h  HomeWidget.ui
src/View/Widgets/PlayerWidget/: PlayerWidget.cpp  PlayerWidget.h  PlayerWidget.ui
src/View/Widgets/WorkInProgressWidget/: WorkInProgressWidget.cpp  WorkInProgressWidget.h  WorkInProgressWidget.ui
